bdr.BDR2.scala.error
Erreur de compilation :
BDR2:17: error: illegal start of simple expression
   if (readMessage) ="V" ) {backward() y=0 backward()backward() backward()backward()}
                    ^BDR2:26: error: Unmatched closing brace '}' ignored here
	}
        ^